syntax = "proto3";

option csharp_namespace = "GrpcServiceChatter";

package chatroom;

// The greeting service definition.
service ChatRoomService {
	// Sends a greeting
	rpc SendMessage (stream MsgChat) returns (stream MsgChat);


}

// The request message containing the user's name.
message MsgChat {
	string chatroon = 1;
	string chatter=3;
	string msg=4;
	string Id=5;
}

// The response message containing the greetings.
message HelloReply {
	string message = 1;
}